changes to make the package ready

--- a/examples/jupyter_notebooks/examples.ipynb
+++ b/examples/jupyter_notebooks/examples.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "# Basic imports and variable setting\n",
     "\n",
-    "import sampler,decoders,graphics\n",
+    "from genephys import sampler,decoders,graphics\n",
     "import math\n",
     "import numpy as np\n",
     "\n",
@@ -866,14 +866,12 @@
     }
    ],
    "source": [
-    "import graphics\n",
-    "\n",
     "T = 400\n",
     "\n",
     "graphics.plot_activation_function(kernel_par=(80,(2,80,0),0),T=400)\n",
     "graphics.plot_activation_function(kernel_par=(50,(2,80,0),100),T=400)\n",
     "graphics.plot_activation_function(kernel_par=(150,(5,120,0)),T=400)\n",
-    "graphics.plot_activation_function(kernel_par=(80, (10, 160, 0)),T=400)\n"
+    "graphics.plot_activation_function(kernel_par=(80, (10, 160, 0)),T=400)"
    ]
   }
  ],
